@@ -269,7 +269,7 @@ class RDoc::Parser::C < RDoc::Parser
 
   def find_body(class_name, meth_name, meth_obj, body, quiet = false)
     case body
-    when %r"((?>/\*.*?\*/\s*)*)(?:static|SWIGINTERN\s+)?(?:intern\s+)?VALUE\s+#{meth_name}
+    when %r"((?>/\*.*?\*/\s*)*)(?:(?:static|SWIGINTERN)\s+)?(?:intern\s+)?VALUE\s+#{meth_name}
             \s*(\([^)]*\))([^;]|$)"xm
       comment, params = $1, $2
       body_text = $&
